# quickclip

./: package-lock.json  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  history.rs  main.rs  shortcut.rs  tray.rs
src/model/: Config.ts  HistoryItem.ts
src/pages/: Prefs.tsx
