[package]
name = "quickclip"
version = "0.0.1"
description = "Lightweight clipboard history"
authors = ["sleb"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
clipboard-rs = "0.1"
tauri-plugin-global-shortcut = "2.0.0-rc"
tauri = { version = "2.0.0-rc", features = ["tray-icon"] }
tauri-plugin-autostart = "2.0.0-rc"
